--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
       fmt(d.deviceOrientation.beta),
       fmt(d.deviceOrientation.gamma),
       fmt(d.ambientLight),
+      fmt(d.magnetometer?.x),
+      fmt(d.magnetometer?.y),
+      fmt(d.magnetometer?.z),
       Date.now()
     ];
 
